feat(d-day): 공휴일을 원천에서 받아 채우는 기계를 세운다
착수 5 의 뒷부분 중 동기화까지다. 1층 검산점은 다음 커밋이다.

한 회차가 204개국 × 4해 × 2호출 = 1,632 호출이다. 그것을 한 트랜잭션에 담지 않는
것이 이 커밋의 뼈대다 — 30개가 실패해도 나머지를 반영한다. 파라과이가 실패한 것이
일본 갱신을 막을 이유가 없고, 한 트랜잭션이 수십 분이면 커넥션 하나를 그동안 붙든다.

그래서 순서가 설계다. 받아 오고(외부) → 가드를 보고(읽기) → 반영한다(쓰기).
커넥션을 쥔 채로 HTTP 를 기다리는 구간이 한 번도 없다 — 가상 스레드 1,020개가
HikariCP 10개에 몰리면 그 풀이 진짜 상한이 되기 때문이다 (§5.4-2).
HolidayUpsertService 의 인자가 원천 DTO 인 것이 그 사실을 강제한다.

급감 가드를 세웠다. 원천이 HTTP 200 으로 빈 배열을 주는 일이 이미 한 번 관측됐고
(SPEC §12.3), 그대로 믿으면 그 나라 공휴일이 조용히 전멸한다. 직전 성공 회차 대비
절반 미만이면 반영하지 않고 ABORTED 로 남긴다. **ABORTED 를 FAILED 와 가르는 것이
요점이다** — 실패는 "못 받았다" 이고 중단은 "받았는데 안 믿는다" 다. 섞으면 사람이
봐야 할 신호가 흔한 실패 속에 묻힌다.

가드가 첫 회차를 막지 않게 해 두었다. 비교할 것이 없는데 막으면 자료가 영영 못
들어온다 — 가드가 자료를 지키는 대신 자료가 생기는 것을 막는 셈이다.

락은 오케스트레이터가 직접 잡는다. @SchedulerLock 은 스케줄 메서드에만 붙는데
POST /admin/sync/{target} 은 스케줄 메서드가 아니다 (§5.6). 그리고 동기화의 이중
실행은 특히 나쁘다 — 두 회차가 서로의 last_seen_run_id 를 「이번에 못 본 것」으로
읽고 번갈아 죽인다. 자료가 조용히 소프트 삭제되고 에러는 하나도 안 난다.

락 상한을 2시간으로 둔 것은 Outbox 릴레이(30초)와 값이 달라서가 아니라 겹침의
성질이 달라서다. 릴레이는 겹쳐도 SKIP LOCKED 와 소비 쪽 dedup 이 받아 내지만,
동기화가 겹치면 소프트 삭제가 서로를 지운다.

────────────────────────────────────────────────────────────

설계를 따르다 순서를 하나 뒤집었다. §5.5 대로 하면 RateLimiter 가 회로 안에
들어가는데, 그러면 **허가를 기다린 시간까지 TimeLimiter 가 센다.** 줄이 길어진
것만으로 타임아웃이 나고 그것이 원천의 실패로 기록된다 — 원천은 멀쩡한데 우리
대기줄 때문에 회로가 열린다. 허가를 먼저 받고 회로로 들어가게 했다.

4xx 는 회로가 안 본다. 한 나라가 404 를 주는 것은 원천의 장애가 아니라 그 나라의
사정이고, 그걸로 회로를 열면 나머지 203국이 막힌다. 회로는 원천마다 하나다 —
국가별로 만들면 204개가 각자 표본 부족이라 영영 안 열린다.

────────────────────────────────────────────────────────────

**짐작과 달랐던 것 둘, 내가 만든 고장 하나를 적어 둔다.**

(1) StructuredTaskScope 가 JDK 25 에서 아직 프리뷰다 (jdk-25.0.4, JEP 505 — 다섯 번째).
§5.4 가 그것으로 묶으라고 적었는데, 쓰려면 컴파일과 런타임 양쪽에 --enable-preview 가
필요하고 프리뷰로 컴파일한 클래스는 다른 JDK 마이너에서 아예 안 뜬다. 그런데 그것이
주는 이득(부분 실패 다루기)은 §5.2 가 이미 「작업이 던지지 않게」 만들어 두어 필요가
없었다. invokeAll 로 가고 가상 스레드라는 알맹이는 그대로다. 스코프가 주는 취소
전파와 타임아웃은 여기서 안 쓴다 — 속도는 RateLimiter 가, 시간은 회로가 잡는다.

(2) source_count 와 stored_count 의 차이가 문서가 말한 것이 아니다. SCHEMA §8.4 는